--- a/package.json
+++ b/package.json
@@ -21,18 +21,18 @@
     "axios": "^0.18.1",
     "lodash": "^4.17.19",
     "prop-types": "^15.6.0",
-    "react": "16.0.0-alpha.12",
-    "react-native": "0.48.4",
+    "react": "^17.0.1",
+    "react-native": "^0.63.3",
     "react-native-animatable": "^1.2.4",
     "react-native-auth0": "^1.2.0",
     "react-native-color-picker": "^0.4.0",
     "react-native-drawer": "^2.5.0",
     "react-native-easy-grid": "^0.1.15",
-    "react-native-elements": "^0.17.0",
+    "react-native-elements": "^2.3.2",
     "react-native-snap-carousel": "^3.3.4",
     "react-native-splash-screen": "^3.0.6",
     "react-native-svg": "^5.4.1",
-    "react-native-vector-icons": "^4.4.2",
+    "react-native-vector-icons": "^7.1.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
@@ -46,7 +46,7 @@
     "babel-preset-react-native-stage-0": "^1.0.1",
     "eslint": "^4.10.0",
     "eslint-plugin-react": "^7.4.0",
-    "react-test-renderer": "16.0.0-alpha.12"
+    "react-test-renderer": "^17.0.1"
   },
   "private": true,
   "license": "GPL-3.0"
